examples/test/testpolicy3033.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3033
  namespace: namespace437
spec:
  podSelector:
    matchLabels:
      key24: value43
      key28: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value5
          key17: value7
          key42: value16
      podSelector:
        matchLabels:
          key5: value2
          key10: value19
          key22: value26
